Fixed search style on mobile

--- a/src/app/style/abstract/_icons.scss
+++ b/src/app/style/abstract/_icons.scss
@@ -185,8 +185,6 @@
 }
 
 @mixin minicart-button {
-	width: 100%;
-
 	&::before,
 	&::after {
 		content: '';
